force-app/main/default/objects/Commercial_Loan__c/Commercial_Loan__c.object-meta.xml
<CustomObject>
    <description>Demo commercial loan request used as the analyst cockpit for AI-assisted spreading without requiring nCino objects.</description>
    <label>Commercial Loan</label>
    <nameField>
        <displayFormat>CL-{000000}</displayFormat>
        <label>Commercial Loan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commercial Loans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>