force-app/main/default/objects/Commercial_Loan__c/fields/Assigned_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Analyst Commercial Loans</relationshipLabel>
    <relationshipName>Assigned_Analyst_Commercial_Loans</relationshipName>
    <type>Lookup</type>
</CustomField>