force-app/main/default/objects/Commercial_Loan__c/fields/Assigned_Underwriter__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Underwriter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Underwriter</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Underwriter Commercial Loans</relationshipLabel>
    <relationshipName>Assigned_UW_Commercial_Loans</relationshipName>
    <type>Lookup</type>
</CustomField>