force-app/main/default/objects/Commercial_Loan__c/fields/Borrower__c.field-meta.xml
<CustomField>
    <fullName>Borrower__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Borrower</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commercial Loans</relationshipLabel>
    <relationshipName>Commercial_Loans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>