force-app/main/default/objects/Commercial_Loan__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <label>Portfolio</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>C&amp;I</fullName><default>true</default><label>C&amp;I</label></value>
            <value><fullName>CRE</fullName><default>false</default><label>CRE</label></value>
            <value><fullName>SBA</fullName><default>false</default><label>SBA</label></value>
            <value><fullName>ABL</fullName><default>false</default><label>ABL</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>