force-app/main/default/objects/Commercial_Loan__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>New</fullName><default>true</default><label>New</label></value>
            <value><fullName>Renewal</fullName><default>false</default><label>Renewal</label></value>
            <value><fullName>Increase</fullName><default>false</default><label>Increase</label></value>
            <value><fullName>Annual Review</fullName><default>false</default><label>Annual Review</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>