force-app/main/default/objects/Commercial_Loan__c/fields/Requested_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Close_Date__c</fullName>
    <label>Requested Close Date</label>
    <type>Date</type>
</CustomField>