force-app/main/default/objects/Commercial_Loan__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Intake</fullName><default>true</default><label>Intake</label></value>
            <value><fullName>Spreading</fullName><default>false</default><label>Spreading</label></value>
            <value><fullName>Underwriting Review</fullName><default>false</default><label>Underwriting Review</label></value>
            <value><fullName>Approval</fullName><default>false</default><label>Approval</label></value>
            <value><fullName>Complete</fullName><default>false</default><label>Complete</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>